--- a/src/assets/scss/elements/_links.scss
+++ b/src/assets/scss/elements/_links.scss
@@ -21,7 +21,7 @@ a {
   &:hover,
   &.link-hover {
     color: $color-link-hover;
-    border-bottom: 5px solid $color-link-focus-bg;
+    border-bottom: 5px solid $color-link-hover-bg;
 
 
     &:disabled,
@@ -33,7 +33,7 @@ a {
   &:active,
   &.link-active {
     color: $color-active;
-    border-bottom: 5px solid $color-link-focus-bg;
+    border-bottom: 5px solid $color-link-active-bg;
   }
 
   &:focus,
@@ -45,7 +45,7 @@ a {
 
   &:visited,
   &.link-visited {
-    color: $color-visited;
+    color: $color-link-visited;
   }
 
   &:disabled,
