--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -29,7 +29,7 @@
     <div>
         <div class="col-md-8">
             <h4>{{ 'GATEWAY.ORGANIZATION' | translate }}</h4>
-            <p class="mb-5">{{gateway.organizationID}}</p>
+            <p class="mb-5">{{gateway.internalOrganizationId}}</p>
         </div>
     </div>
     <h4 *ngIf="gateway.description">{{ 'GATEWAY.DESCRIPTION' | translate }}</h4>
