--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -24,10 +24,10 @@
         </ng-container>
 
         <!-- Location Column -->
-        <ng-container matColumnDef="organizationId">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.ORGANIZATIONID' | translate }}</th>
+        <ng-container matColumnDef="internalOrganizationId">
+            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.INTERNALORGANIZATIONID' | translate }}</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.organizationID }}
+                {{ element.internalOrganizationId }}
             </td>
         </ng-container>
 
