--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -24,10 +24,10 @@
         </ng-container>
 
         <!-- Location Column -->
-        <ng-container matColumnDef="internalOrganizationId">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.INTERNALORGANIZATIONID' | translate }}</th>
+        <ng-container matColumnDef="internalOrganizationName">
+            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.internalOrganizationId }}
+                {{ element.internalOrganizationName }}
             </td>
         </ng-container>
 
