--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -2,15 +2,32 @@
   [ctaLabel]="'FORM.CREATE-NEW-LORA-GATEWAY' | translate" [ctaRouterLink]="'gateway-edit'">
 </app-top-bar>
 
-<mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3" (selectedTabChange)="showMap($event)">
-  <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
-    <div class="m-md-4 p-md-3">
-      <app-gateway-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-gateway-table>
+<div class="jumbotron m-md-4 p-md-3">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-3"></div>
+    <div class="col-3"></div>
+    <div class="col-3">
+      <mat-form-field appearance="fill">
+        <mat-label>Toppings</mat-label>
+        <mat-select multiple>
+          <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-  </mat-tab>
-  <mat-tab label="{{'GATEWAY.MAP-TAB' | translate}}">
-    <div *ngIf="showmap && gateways">
-      <app-map [coordinateList]="coordinateList"></app-map>
-    </div>
-  </mat-tab>
-</mat-tab-group>
+  </div>
+
+
+  <mat-tab-group animationDuration="200ms" class=" " (selectedTabChange)="showMap($event)">
+    <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
+      <div class="m-md-4 p-md-3">
+        <app-gateway-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-gateway-table>
+      </div>
+    </mat-tab>
+    <mat-tab label="{{'GATEWAY.MAP-TAB' | translate}}">
+      <div *ngIf="showmap && gateways">
+        <app-map [coordinateList]="coordinateList"></app-map>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
