--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -1,3 +1,8 @@
+<div class="mt-2">
+    <h3>
+        OpenDataDK datasæt
+    </h3>
+</div>
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
     <label class="form-label" for="name">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-NAME' | translate}}</label>*
@@ -16,16 +21,16 @@
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-    <label class="form-label" for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHOR' | translate}}</label>*
+    <label class="form-label" for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME' | translate}}</label>*
     <input 
         type="text" 
         class="form-control" 
-        id="author" 
-        name="author"
-        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHOR-PLACEHOLDER' | translate" 
+        id="authorName" 
+        name="authorName"
+        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER' | translate" 
         required 
-        [(ngModel)]="openDataDk.author"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('author'), 'is-valid' : formFailedSubmit && !errorFields.includes('author')}">
+        [(ngModel)]="openDataDk.authorName"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorName'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorName')}">
     </div>
 </div>
 
@@ -46,17 +51,17 @@
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-    <label class="form-label" for="title">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-TITLE' | translate}}</label>
+    <label class="form-label" for="title">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE' | translate}}</label>
     <input 
         type="text" 
         class="form-control" 
-        id="title" 
-        ame="title"
-        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-TITLE-PLACEHOLDER' | translate" 
+        id="resourceTitle" 
+        ame="resourceTitle"
+        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE-PLACEHOLDER' | translate" 
         maxlength="120" 
         required
-        [(ngModel)]="openDataDk.title"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('title'), 'is-valid' : formFailedSubmit && !errorFields.includes('title')}">
+        [(ngModel)]="openDataDk.resourceTitle"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('resourceTitle'), 'is-valid' : formFailedSubmit && !errorFields.includes('resourceTitle')}">
     </div>
 </div>
 
@@ -77,16 +82,16 @@
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-    <label class="form-label" for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-TAGS' | translate}}</label>
+    <label class="form-label" for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS' | translate}}</label>
     <input 
         type="text" 
         class="form-control" 
-        id="tags" 
-        name="tags"
-        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-TAGS-PLACEHOLDER' | translate" 
+        id="keywords" 
+        name="keywords"
+        [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER' | translate" 
         required 
-        [(ngModel)]="openDataDk.tags"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('tags'), 'is-valid' : formFailedSubmit && !errorFields.includes('tags')}">
+        [(ngModel)]="openDataDk.keywords"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('keywords'), 'is-valid' : formFailedSubmit && !errorFields.includes('keywords')}">
     </div>
 </div>
 
