--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -35,7 +35,7 @@
         <ng-container matColumnDef="location">
             <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.location.longitude }}, {{ element.location.latitude }}
+                {{ element.location.longitude  | number:'2.1-6' }}, {{ element.location.latitude  | number:'2.1-6' }}
             </td>
         </ng-container>
 
