--- a/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
+++ b/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
@@ -61,7 +61,7 @@
               [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorizationHeader'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorizationHeader')}">
         </div>
       <div *ngIf="datatarget.setToOpendataDk">
-        <app-opendatadk-edit [openDataDk]="datatarget.openDataDkDataset"></app-opendatadk-edit>
+        <app-opendatadk-edit [openDataDk]="datatarget.openDataDkDataset" [errorFields]="errorFields" [formFailedSubmit]="formFailedSubmit"></app-opendatadk-edit>
       </div>
       </div>
         <div *ngIf="datatargetid === 0">
