--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -86,12 +86,12 @@
     <input 
         type="text" 
         class="form-control" 
-        id="keywords" 
-        name="keywords"
+        id="keywordsInput" 
+        name="keywordsInput"
         [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER' | translate" 
         required 
-        [(ngModel)]="openDataDk.keywords"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('keywords'), 'is-valid' : formFailedSubmit && !errorFields.includes('keywords')}">
+        [(ngModel)]="openDataDk.keywordsInput"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('keywordsInput'), 'is-valid' : formFailedSubmit && !errorFields.includes('keywordsInput')}">
     </div>
 </div>
 
