--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -27,7 +27,8 @@
   <mat-tab-group animationDuration="200ms" class=" " (selectedTabChange)="showMap($event)">
     <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
       <div class="m-md-4 p-md-3">
-        <app-gateway-table [gateways]="gateways" [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit">
+        <app-gateway-table [gateways]="gateways" [isLoadingResults]="isLoadingResults"
+          (deleteGateway)="deleteGateway($event)">
         </app-gateway-table>
       </div>
     </mat-tab>
