IOT-937 removed asterix rom chose users on permission

--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="form-group mt-3 col-12">
-        <label class="form-label" for="user">{{'PERMISSION.EDIT.USERS' | translate}}</label>*
+        <label class="form-label" for="user">{{'PERMISSION.EDIT.USERS' | translate}}</label>
         <mat-form-field>
             <mat-select 
                 name="users"
