IOT-928 add subject observer to show and hide navbar on login to solve race condition

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+<div *ngIf="isLoggedIn">
+  <app-navbar></app-navbar>
+</div>
 <div id="content">
   <div id="mainBody">
     <router-outlet></router-outlet>
