update search results

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap.scss';
 
+//Animations
+@import 'assets/scss/animation/jumping-dots';
 
 //Components
 @import 'assets/scss/components/boxes';
