--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -10,7 +10,7 @@
                     {{permission.organization?.name}}
                 </p>
             </div>
-            <div class="btn-group float-right">
+            <div class="btn-group float-md-right dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     {{'PERMISSION.DETAIL.DROPDOWN' | translate}} <span class="caret"></span>
