--- a/src/app/admin/users/user-detail/user-detail.component.html
+++ b/src/app/admin/users/user-detail/user-detail.component.html
@@ -20,7 +20,7 @@
                     {{((user.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}
                 </p>
             </div>
-            <div class="btn-group float-right">
+            <div class="btn-group float-md-right dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     {{'USERS.DETAIL.DROPDOWN' | translate}} <span class="caret"></span>
