--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-12">
 
-        <div class="btn-group float-right">
+        <div class="btn-group float-md-right dropdown">
             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 {{'APPLICATION.BULK.DOWNLOAD' | translate}} <span class="caret"></span>
