--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -66,9 +66,10 @@
   }
 
   .dropdown-menu {
+    &--table{
     min-width: 90px !important;
     left: -35px !important;
-
+    }
     li {
       padding: 0;
       margin: 0;
