--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -6,7 +6,7 @@
             <div class="float-left">
                 <h2> {{organisation.name}}</h2>
             </div>
-            <div class="btn-group float-right">
+            <div class="btn-group float-md-right dropdown">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     {{'ORGANISATION.DROPDOWN' | translate}} <span class="caret"></span>
@@ -18,8 +18,7 @@
                         </a>
                     </li>
                     <li class="dropdown-item">
-                        <a (click)="clickDelete()"
-                            [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
+                        <a (click)="clickDelete()" [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
                         </a>
                     </li>
                 </ul>
