--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -54,7 +54,8 @@
                     <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                    <ul class="dropdown-menu dropdown-menu--table"
+                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
                         <li class="dropdown-item">
                             <a [routerLink]="['/admin/permissions', element.id, 'edit-permission']"
                                 routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
