--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -45,7 +45,8 @@
                     <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                    <ul class="dropdown-menu dropdown-menu--table"
+                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
                         <li class="dropdown-item">
                             <a [routerLink]="[element.id, 'edit-application']"
                                 routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
