--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -60,7 +60,7 @@
           <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
             data-toggle="dropdown" aria-expanded="false"
             [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-          <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+          <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
             <li class="dropdown-item">
               <a [routerLink]="['iot-device-edit', element.id]"
                 routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
