--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -9,7 +9,8 @@
                 {{ 'DEVICE-MODEL.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['device-model-detail', element.id]" routerLinkActive="active" class="application-link">
+                <a [routerLink]="['device-model-detail', element.id]" routerLinkActive="active"
+                    class="application-link">
                     {{ element.body.name }}
                 </a>
             </td>
@@ -31,14 +32,14 @@
                     <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
+                    <ul class="dropdown-menu dropdown-menu--table"
+                        attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
                         <li class="dropdown-item">
                             <a [routerLink]="['device-model-edit', element.id]"
                                 routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
                         </li>
                         <li class="dropdown-item">
-                            <a (click)="clickDelete(element)"
-                                [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                            <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
                         </li>
                     </ul>
                 </div>
