--- a/src/app/admin/organisation/organisation-list/organisation-list.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-list.component.html
@@ -1,6 +1,8 @@
-<app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.ORGANISATIONS' | translate"
-    [ctaLabel]="'ORGANISATION.FORM.CREATE-NEW-ORGANISATION' | translate" [ctaRouterLink]="'new-organisation'"
-    (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
+<app-top-bar 
+    [title]="'NAV.ORGANISATIONS' | translate" 
+    [ctaLabel]="'ORGANISATION.FORM.CREATE-NEW-ORGANISATION' | translate" 
+    [ctaRouterLink]="'new-organisation'">
+</app-top-bar>
 
 <div class="m-md-4 p-md-3">
     <app-organisation-tabel></app-organisation-tabel>
