IOT-926 fixed naming, added propper back title to datatarget

--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,6 +1,6 @@
 <app-top-bar [pageLimit]="pageLimit" [title]="title"
   [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
-  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'">
+  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'NAV.APPLICATION' | translate">
 </app-top-bar>
 
 <div class="m-md-4 p-md-3">
