--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -1,4 +1,4 @@
-<app-top-bar [backButtonTitle]="'NAV.BACK' | translate" [title]="'APPLICATION.BULK.TITLE' | translate"></app-top-bar>
+<app-top-bar [backButtonTitle]="'NAV.APPLICATION' | translate" [title]="'APPLICATION.BULK.TITLE' | translate"></app-top-bar>
 <div class="row">
     <div class="col-12">
         <mat-progress-bar *ngIf="download$ | async as download"
