--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@
 @import 'assets/scss/components/bulk-import';
 @import 'assets/scss/components/forms';
 @import 'assets/scss/components/loading-spinner';
+@import 'assets/scss/components/map';
 @import 'assets/scss/components/navbar';
 @import 'assets/scss/components/tables';
 @import 'assets/scss/components/topbar';
