--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -3,7 +3,11 @@
 </app-top-bar>
 
 <div class="jumbotron m-md-4 p-md-3">
-  <mat-tab-group animationDuration="200ms" class=" " (selectedTabChange)="showMap($event)">
+  <app-sub-bar [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate" [addDropdown]="true"
+    [options]="organisations" [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate"
+    (updateSelectedOpt)="filterGateway($event)">
+  </app-sub-bar>
+  <mat-tab-group animationDuration="200ms" (selectedTabChange)="showMap($event)">
     <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
       <div class="m-md-4 p-md-3">
         <app-gateway-table [gateways]="gateways" [isLoadingResults]="isLoadingResults"
@@ -13,7 +17,8 @@
     </mat-tab>
     <mat-tab label="{{'GATEWAY.MAP-TAB' | translate}}">
       <div *ngIf="showmap && gateways">
-        <app-map [coordinateList]="coordinateList" (updateOrganisations)="filterGatewaysToMap($event)"></app-map>
+        <app-map [coordinateList]="coordinateList">
+        </app-map>
       </div>
     </mat-tab>
   </mat-tab-group>
