IOT-913 change sigfox product certificate url

--- a/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
@@ -65,7 +65,7 @@
               </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="form-group mt-3 col-12">
-            <a href="https://support.sigfox.com/docs/product-certificate" target="_blank">
+            <a href="https://partners.sigfox.com/search/products?or[categories][0]=device&q=&limit=12&page=0" target="_blank">
               {{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE-HELP-TEXT' | translate}}
             </a>
           </div>  
